fix: fix outline clipping

--- a/TREM/css/setting.css
+++ b/TREM/css/setting.css
@@ -215,7 +215,7 @@ body.settingDisabled .control-title, body.settingDisabled .option-label {
 .list-container {
     display: none;
     width: 100%;
-    margin-right: 8px;
+    margin: 0 8px;
     height: max-content;
 }
 
